--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=TeamRecoderSemiProject
 
-
+# 192.168.10.51:3306
+# localhost:3306
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/new_schema
+spring.datasource.url=jdbc:mysql://localhost:3306/damoim
 spring.datasource.username=root
 spring.datasource.password=qwer1234
 
