--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.semi.youtube.model
+mybatis.type-aliases-package=com.damoim.model
