--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ mybatis.type-aliases-package=com.damoim.model
 
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
