--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.damoim.model
 
 
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
 
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
