--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,13 @@
 			<scope>test</scope>
 		</dependency>
 		
-				
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>		
 		<!-- 롬북 -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
