--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.mvc.view.suffix=.jsp
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.damoim.model
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
