회원가입 조건,등등
20240808

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<!-- -->
+		<!-- devtools -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
