이메일 확인기능구현중
20240812

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<!--메일 -->
+		<dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>javax.mail</artifactId>
+    <version>1.6.2</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
