--- a/pom.xml
+++ b/pom.xml
@@ -133,16 +133,22 @@
 			<version>20240303</version>
 		</dependency>
 		
-		<!-- Spring Security -->
+		<!--Spring Security-->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	
 		</dependency>
 		
 		<dependency>
-			<groupId>org.jetbrains</groupId>
-			<artifactId>annotations</artifactId>
-			<version>24.0.0</version>
+		<groupId>org.jetbrains</groupId>
+		<artifactId>annotations</artifactId>
+		<version>24.0.0</version>
+		</dependency>
+		
+		<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 		
 		<!-- Json Web Token : JWT -->
