--- a/pom.xml
+++ b/pom.xml
@@ -136,8 +136,7 @@
 		<!--Spring Security-->
 		<dependency>
 		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-security</artifactId>
-	
+		<artifactId>spring-boot-starter-security</artifactId>	
 		</dependency>
 		
 		<dependency>
@@ -151,26 +150,12 @@
 		<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 		
-		<!-- Json Web Token : JWT -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-messaging -->
 		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-api</artifactId>
-			<version>0.11.5</version>
-		</dependency> 
-		
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-jackson</artifactId>
-			<version>0.11.5</version>
-			<scope>runtime</scope>
-		</dependency> 
-		
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-impl</artifactId>
-			<version>0.11.5</version>
-			<scope>runtime</scope>
-		</dependency> 
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-messaging</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
