--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.datasource.url=jdbc:mysql://192.168.10.51:3306/damoim?serverTimezone=Asia
 jdbc:mysql://localhost:3306/damoim?serverTimezone=Asia/Seoul
 #spring.datasource.url=jdbc:mysql://localhost:3306/damoim
 
+# Character encoding settings
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+
+
 spring.datasource.username=root
 spring.datasource.password=qwer1234
 
