--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=TeamRecoderSemiProject
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.datasource.url=jdbc:mysql://localhost:3306/damoim?serverTimezone=Asia/Seoul
 jdbc:mysql://localhost:3306/damoim?serverTimezone=Asia/Seoul
-spring.datasource.url=jdbc:mysql://192.168.10.51:3306/damoim
+spring.datasource.url=jdbc:mysql://localhost:3306/damoim
 
 spring.datasource.username=root
 spring.datasource.password=qwer1234
